--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>CMU Memes</title>
+    <title>CMU memes</title>
 
     <!-- Bootstrap -->
     <link rel="stylesheet" href="{% static "bootstrap-3.1.1-dist/css/bootstrap.min.css" %}">
@@ -18,20 +18,25 @@
       <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
 
-    {% block stylesheet %}
+    <link rel="stylesheet" href="{% static "website/base.css" %}">
 
+    {% block stylesheet %}
+    
     {% endblock stylesheet %}
   </head>
   <body>
-    {% block content %}
+    {% include "navbar.html" %}
+    <div class="container">
+    {% block main_content %}
 
-    {% endblock content %}
+    {% endblock main_content %}
+    </div><!-- /.container -->
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="{% static "jquery-1.11.0.min.js" %}"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="{% static "bootstrap-3.1.1-dist/js/bootstrap.min.js" %}"></script>
-
+    
     {% block script %}
     
     {% endblock script %}
