Add a Profile page

--- a/website/templates/registration/register.html
+++ b/website/templates/registration/register.html
@@ -1,11 +1,14 @@
 {% extends "base.html" %}
 
 {% block main_content %}
+
+
 <form class="form-centered" role="form" method="post" action="{% url 'register' %}">
 <h2>Please Register</h2>
 {% for error in form.non_field_errors %}
-<div class="alert alert-danger">{{ error }}</div>
+{% include "alert.html" with type="alert-danger" message=error %}
 {% endfor %}
+
 {% include "form_snippet.html" with form=form %}
 <div class="form-group">
 	<button type="submit" class="btn btn-lg btn-block btn-red">Register</button>
@@ -14,3 +17,7 @@
 </form>
 	
 {% endblock main_content %}
+
+{% block script %}
+
+{% endblock script %}
