--- a/website/templates/navbar.html
+++ b/website/templates/navbar.html
@@ -12,7 +12,7 @@
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav navbar-right">
         {% if user.is_authenticated %}
-        <li><a href="{% url 'home' %}"><strong>{{user.username}}</strong></a></li>
+        <li><a href="{% url 'profile' %}"><strong>{{user.username}}</strong></a></li>
         <li><a href="{% url 'logout' %}">Logout</a></li>
         {% else %}
         <li><a href="{% url 'login' %}">Login</a></li>
