--- a/website/templates/registration/login.html
+++ b/website/templates/registration/login.html
@@ -4,8 +4,9 @@
 <form class="form-centered" role="form" method="post" action="{% url 'login' %}">
 <h2>Please Login</h2>
 {% for error in form.non_field_errors %}
-<div class="alert alert-danger">{{ error }}</div>
+{% include "alert.html" with type="alert-danger" message=error %}
 {% endfor %}
+
 {% include "form_snippet.html" with form=form %}
 <input type="hidden" name="next" value="{{ next }}" />
 <div class="form-group">
