--- a/website/templates/alert.html
+++ b/website/templates/alert.html
@@ -4,6 +4,6 @@
 {% endcomment %}
 
 <div class="alert {{ type }}">
-    <a href="#" class="close" data-dismiss="alert">&times;</a>
+	<button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
     {{ message }}
 </div>
