--- a/website/templates/navbar.html
+++ b/website/templates/navbar.html
@@ -17,6 +17,7 @@
         {% else %}
         <li><a href="{% url 'login' %}">Login</a></li>
         <li><a href="{% url 'register' %}">Register</a></li>
+        <li><a href="{% url 'about' %}">About</a></li>
         {% endif %}
       </ul>
     </div><!--/.nav-collapse -->
