--- a/website/templates/registration/profile.html
+++ b/website/templates/registration/profile.html
@@ -33,9 +33,9 @@
 </p>
 
 <div class="row">
-	<button class="btn btn-red btn-lg col-md-2 col-md-offset-1" data-toggle="modal" data-target="#profile-modal">Update Profile</button>
-	<button class="btn btn-red btn-lg col-md-2 col-md-offset-1" data-toggle="modal" data-target="#password-modal">Set Password</button>
-	<button class="btn btn-red btn-lg col-md-2 col-md-offset-1" data-toggle="modal" data-target="#delete-modal">Delete Account</button>
+	<button class="btn btn-red btn-lg col-md-2 col-md-offset-2 col-xs-10 col-xs-offset-1" data-toggle="modal" data-target="#profile-modal">Update Profile</button>
+	<button class="btn btn-red btn-lg col-md-2 col-md-offset-1 col-xs-10 col-xs-offset-1" data-toggle="modal" data-target="#password-modal">Set Password</button>
+	<button class="btn btn-red btn-lg col-md-2 col-md-offset-1 col-xs-10 col-xs-offset-1" data-toggle="modal" data-target="#delete-modal">Delete Account</button>
 </div>
 
 <hr>
@@ -53,7 +53,7 @@
 	<div class="panel-body">
 		<img src="{% url 'picture' meme.id %}" alt="" class="img-rounded img-responsive center-block">
 	</div>
-	<div class="panel-footer">Posted on {{ meme.date }} by {{ meme.author }}</div>
+	<div class="panel-footer">Posted on {{ meme.date }}</div>
 </div>
 {% endfor %}
 
@@ -115,8 +115,8 @@
 			<div class="modal-body">
 					<p class="text-centered lead">Are you sure you want to delete your account?</p>
 				<div class="row">
-					<a class="btn btn-red btn-lg col-md-2 col-md-offset-3" href="{% url 'delete profile' %}">Yes</a>
-					<button type="button" class="btn btn-red btn-lg col-md-2 col-md-offset-2" data-dismiss="modal">No</button>
+					<a class="btn btn-red btn-lg col-md-2 col-md-offset-3 col-xs-4 col-xs-offset-1" href="{% url 'delete profile' %}">Yes</a>
+					<button type="button" class="btn btn-red btn-lg col-md-2 col-md-offset-2 col-xs-4 col-xs-offset-2" data-dismiss="modal">No</button>
 				</div>
 			</div>
 		</div>
