--- a/website/templates/website/about.html
+++ b/website/templates/website/about.html
@@ -2,6 +2,29 @@
 
 {% block main_content %}
 
-<h1 class="page-header text-centered">Welcome on CMU memes!</h1>
+<h1 class="page-header text-center">Welcome on CMU memes!</h1>
+
+<h3>Context</h3>
+
+<p>This website has been developed as part of the <strong>98-206 Experience Entertainment</strong> class by <strong>Youssef Ahres</strong> and <strong>Allan Renucci</strong>, students at <strong>Carnegie Mellon University</strong>.</p>
+
+<h3>Goal</h3>
+
+<p> The goal of the project is to create a <strong>collaborative platform</strong> for CMU memes. All CMU students, alumnis and staffs are welcome to register and become member of this <strong>community</strong>. You can either share your thoughts and jokes or just have fun seeing other posts. There's absolutely no pressure.</p>
+
+<h3>Privacy</h3>
+<p>To protect your privacy as users, your email address is held private and only your
+username will appear when you publish a meme.</p>
+
+<h3>Functionalities</h3>
+<p>
+	<ul>
+		<li>The users can upvote or downvote the posts in order to make a real-time filtering and ranking.</li>
+		<li>Users' Account can be updated and deleted at any times.</li>
+	</ul>
+</p>
+
+<h3>Open Source</h3>
+<p>Besides, this is an <strong>open-source project</strong>. Every contributions are welcome. The code is hosted on <a href="https://github.com/allanrenucci/cmu_memes/">GitHub</a>.</p>
 
 {% endblock main_content %}
