--- a/website/templates/registration/profile.html
+++ b/website/templates/registration/profile.html
@@ -48,12 +48,12 @@
 <div class="panel panel-default">
 	<div class="panel-heading">
 	    <a href="{% url 'delete meme' meme.id %}" type="button" class="close" aria-hidden="true">&times;</a>
-		<h3 class="panel-title">{{ meme.title }}</h3>
+		<h3 class="panel-title meme-title">{{ meme.title }}</h3>
 	</div>
 	<div class="panel-body">
 		<img src="{% url 'picture' meme.id %}" alt="" class="img-rounded img-responsive center-block">
 	</div>
-	<div class="panel-footer">Posted on {{ meme.date }}</div>
+	<div class="panel-footer meme-info">Posted on {{ meme.date }}</div>
 </div>
 {% endfor %}
 
@@ -113,7 +113,7 @@
 	    		<h3 class="modal-title">Delete Account Confirmation</h3>
 			</div>
 			<div class="modal-body">
-					<p class="text-centered lead">Are you sure you want to delete your account?</p>
+					<p class="text-center lead">Are you sure you want to delete your account?</p>
 				<div class="row">
 					<a class="btn btn-red btn-lg col-md-2 col-md-offset-3 col-xs-4 col-xs-offset-1" href="{% url 'delete profile' %}">Yes</a>
 					<button type="button" class="btn btn-red btn-lg col-md-2 col-md-offset-2 col-xs-4 col-xs-offset-2" data-dismiss="modal">No</button>
