--- a/website/templates/website/index.html
+++ b/website/templates/website/index.html
@@ -52,13 +52,58 @@
 {% for meme in memes %}
 <div class="panel panel-default">
 	<div class="panel-heading">
-		<h3 class="panel-title">{{ meme.title }}</h3>
+		<h3 class="panel-title meme-title">{{ meme.title }}</h3>
 	</div>
 	<div class="panel-body">
 		<img src="{% url 'picture' meme.id %}" alt="" class="img-rounded img-responsive center-block">
 	</div>
-	<div class="panel-footer">Posted on {{ meme.date }} by {{ meme.author }}</div>
+	<div class="panel-footer">
+		<div class="row">
+			<span class="col-md-6 meme-info col-xs-12">Posted on {{ meme.date }} by {{ meme.author }}</span>
+
+			{% if user.is_authenticated %}
+			<div class="col-md-4 col-md-offset-2 col-xs-10 row">
+
+				<button type="button" class="vote-btn btn btn-default btn-lg col-md-3 col-md-offset-0 col-xs-2 col-xs-offset-2">
+					<span class="glyphicon glyphicon-thumbs-up"></span>
+					<input class="vote-url" type="hidden" value="{% url 'meme upvote' meme.id %}">
+				</button>
+				<span class="up-vote-count col-md-3 col-xs-3 meme-info">{{ meme.up_vote_count }}</span>
+
+				<button type="button" class="vote-btn btn btn-default btn-lg col-md-3 col-md-offset-0 col-xs-2">
+					<span class="glyphicon glyphicon-thumbs-down"></span>
+					<input class="vote-url" type="hidden" value="{% url 'meme downvote' meme.id %}">
+				</button>
+				<span class="down-vote-count col-md-3 col-xs-3 meme-info">{{ meme.down_vote_count }}</span>
+
+			</div>
+			{% endif %}
+			
+		</div>
+	</div>
 </div>
 {% endfor %}
 
 {% endblock main_content %}
+
+{% block script %}
+<script>
+
+	function vote ($container, url) {
+		var $up_counter = $container.find(".up-vote-count");
+		var $down_counter = $container.find(".down-vote-count");
+
+		$.getJSON( url, function( resp ) {
+			$up_counter.text(resp['up_vote']);
+			$down_counter.text(resp['down_vote']);
+		});
+	}
+
+	$(".vote-btn").click(function() {
+		var url = $(this).find(".vote-url").val();
+		var $container = $(this).parent();
+		vote($container, url);
+	});
+
+</script>
+{% endblock script %}
