--- a/website/templates/website/index.html
+++ b/website/templates/website/index.html
@@ -59,7 +59,7 @@
 	</div>
 	<div class="panel-footer">
 		<div class="row">
-			<span class="col-md-6 meme-info col-xs-12">Posted on {{ meme.date }} by {{ meme.author }}</span>
+			<span class="col-md-6 meme-info col-xs-12">Posted on {{ meme.date }}{% if meme.author %} by {{ meme.author }}.{% endif %}</span>
 
 			{% if user.is_authenticated %}
 			<div class="col-md-4 col-md-offset-2 col-xs-10 row">
