--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -27,6 +27,12 @@
   <body>
     {% include "navbar.html" %}
     <div class="container">
+    {% for message in messages %}
+    <div class="alert {{ message.tags }}">
+        <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
+        {{ message }}
+    </div>
+    {% endfor %}
     {% block main_content %}
 
     {% endblock main_content %}
