--- a/website/templates/navbar.html
+++ b/website/templates/navbar.html
@@ -1,25 +1,29 @@
 <div class="navbar navbar-red navbar-fixed-top" role="navigation">
-  <div class="container">
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="{% url 'home' %}">CMU memes</a>
-    </div>
-    <div class="collapse navbar-collapse">
-      <ul class="nav navbar-nav navbar-right">
-        {% if user.is_authenticated %}
-        <li><a href="{% url 'profile' %}"><strong>{{user.username}}</strong></a></li>
-        <li><a href="{% url 'logout' %}">Logout</a></li>
-        {% else %}
-        <li><a href="{% url 'login' %}">Login</a></li>
-        <li><a href="{% url 'register' %}">Register</a></li>
-        <li><a href="{% url 'about' %}">About</a></li>
-        {% endif %}
-      </ul>
-    </div><!--/.nav-collapse -->
-  </div>
+	<div class="container">
+		<div class="navbar-header">
+			<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+				<span class="sr-only">Toggle navigation</span>
+				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>
+			</button>
+			<a class="navbar-brand" href="{% url 'home' %}">CMU memes</a>
+		</div>
+		<div class="collapse navbar-collapse">
+			<ul class="nav navbar-nav navbar-left">
+				<li {% if active == "new" %}class="active"{% endif %}><a href="{% url 'new' %}">New</a></li>
+				<li {% if active == "best" %}class="active"{% endif %}><a href="{% url 'best' %}">Best</a></li>
+			</ul>
+			<ul class="nav navbar-nav navbar-right">
+			{% if user.is_authenticated %}
+				<li {% if active == "profile" %}class="active"{% endif %}><a href="{% url 'profile' %}"><strong>{{user.username}}</strong></a></li>
+				<li><a href="{% url 'logout' %}">Logout</a></li>
+			{% else %}
+				<li {% if active == "login" %}class="active"{% endif %}><a href="{% url 'login' %}">Login</a></li>
+				<li {% if active == "register" %}class="active"{% endif %}><a href="{% url 'register' %}">Register</a></li>
+				<li {% if active == "about" %}class="active"{% endif %}><a href="{% url 'about' %}">About</a></li>
+			{% endif %}
+			</ul>
+		</div><!--/.nav-collapse -->
+	</div>
 </div>
