--- a/website/templates/registration/login.html
+++ b/website/templates/registration/login.html
@@ -1,11 +1,17 @@
 {% extends "base.html" %}
 
+
 {% block main_content %}
+
+{% for error in form.non_field_errors %}
+<div class="alert alert-danger">
+    <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
+    {{ error }}
+</div>
+{% endfor %}
+
 <form class="form-centered" role="form" method="post" action="{% url 'login' %}">
 <h2>Please Login</h2>
-{% for error in form.non_field_errors %}
-{% include "alert.html" with type="alert-danger" message=error %}
-{% endfor %}
 
 {% include "form_snippet.html" with form=form %}
 <input type="hidden" name="next" value="{{ next }}" />
