--- a/website/templates/registration/register.html
+++ b/website/templates/registration/register.html
@@ -2,12 +2,15 @@
 
 {% block main_content %}
 
+{% for error in form.non_field_errors %}
+<div class="alert alert-danger">
+    <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
+    {{ error }}
+</div>
+{% endfor %}
 
 <form class="form-centered" role="form" method="post" action="{% url 'register' %}">
 <h2>Please Register</h2>
-{% for error in form.non_field_errors %}
-{% include "alert.html" with type="alert-danger" message=error %}
-{% endfor %}
 
 {% include "form_snippet.html" with form=form %}
 <div class="form-group">
