--- a/website/templates/website/index.html
+++ b/website/templates/website/index.html
@@ -4,12 +4,6 @@
 
 {% block main_content %}
 
-{% for info in infos %}
-{% include "alert.html" with type="alert-success" message=info %}
-{% endfor %}
-
-{% if user.is_authenticated %}
-
 <div class="panel panel-default">
 	<div class="panel-heading">
 		<h3 class="panel-title">Post a new meme!</h3>
@@ -42,12 +36,11 @@
 			<div class="form-group">
 				<button type="submit" class="btn btn-lg btn-block btn-red">Post</button>
 			</div>
+			{{ form.next }}
 			{% csrf_token %}
 		</form>	
 	</div>
 </div>
-
-{% endif %}
 
 {% for meme in memes %}
 <div class="panel panel-default">
@@ -61,7 +54,6 @@
 		<div class="row">
 			<span class="col-md-6 meme-info col-xs-12">Posted on {{ meme.date }}{% if meme.author %} by {{ meme.author }}.{% endif %}</span>
 
-			{% if user.is_authenticated %}
 			<div class="col-md-4 col-md-offset-2 col-xs-10 row">
 
 				<button type="button" class="vote-btn btn btn-default btn-lg col-md-3 col-md-offset-0 col-xs-2 col-xs-offset-2">
@@ -77,7 +69,6 @@
 				<span class="down-vote-count col-md-3 col-xs-3 meme-info">{{ meme.down_vote_count }}</span>
 
 			</div>
-			{% endif %}
 			
 		</div>
 	</div>
