Update About page

--- a/website/templates/website/about.html
+++ b/website/templates/website/about.html
@@ -19,6 +19,7 @@ username will appear when you publish a meme.</p>
 <h3>Functionalities</h3>
 <p>
 	<ul>
+		<li>The users can post and delete memes.</li>
 		<li>The users can upvote or downvote the posts in order to make a real-time filtering and ranking.</li>
 		<li>Users' Account can be updated and deleted at any times.</li>
 	</ul>
